# tracified-nft-backend

./: .gitignore  ABC.json  Dockerfile  Jenkinsfile  LICENSE  README.md  TSTNFTHTML.HTML  XYZ.json  aaa.html  chnges.html  dwdhtmltimeline.html  go.mod  go.sum  logs.txt  main.go  reportStyles.css  swagger.yaml  testReport.html  zstyle.html
api/: healthCheck.go  htmlGenerator.go  nftHandler.go  userHandler.go  watchListHandler.go
apiHandler/: RuriHandler.go  collectionsHandler.go  composwerUserHandler.go  customizedSVGHandler.go  docsHandler.go  endorsementHandler.go  faqHandler.go  favourites.go  healthCheck.go  htmlGenerator.go  ipfsHandler.go  mapHandler.go  newsletterHandler.go  nftComposerProject.go  nftGenerator.go  nftHandler.go  nftstateHandler.go  oneTimePasswordHandler.go  partnersHandler.go  queryExecuter.go  reviewhandler.go  ruriSvgCreateHandler.go  userHandler.go  watchListHandler.go  weiget.go
businessFacade/customizedNFTFacade/: customizedNFTHandler.go  daoInterfaces.go  mapGenerator.go
businessFacade/ipfsBusinessFacade/: ipfsDaoInterface.go  ipfsFacade.go  ipfsForCollections.go
businessFacade/marketplaceBusinessFacade/: Offer.go  Ownership.go  RURI.go  collection.go  daoInterfaces.go  docs.go  endorsement.go  faq.go  favourites.go  newsletter.go  nft.go  nftMarketplaceDao.go  nftmarketplace.go  partner.go  review.go  svg.go  user.go  watchList.go  watchListDao.go
businessFacade/nftComposerBusinessFacade/: daoInterfaces.go  htmlGenerator.go  nftGenerator.go  nftProject.go  queryExecuter.go  weiget.go  weigetDao.go
businessFacade/ruriBusinessFacade/: daoInterfaces.go  ruri.go
businessFacades/: healthCheck.go  nftHandler.go  userHandler.go  watchListHandler.go
commons/: envFileReader.go
configs/: EmailConfig.go  EndorsmentEmailConfig.go  SubscribeEmail.go  chatEmail.go  loadEnv.go  mapConfig.go
connections/: dbConnection.go
constants/: ipfsconstants.go  widgetconstants.go
controllers/: OfferDao.go  nft.go  nftDao.go  nftOwnership.go  nftOwnershipDao.go  user.go  userDao.go  watchList.go
controllers/nftComposerController/: htmlGenerator.go  weiget.go
controllers/nftController/: Offer.go  Ownership.go  nft.go  user.go  watchList.go
core/connection/: dbConnection.go
core/routes/: hendler.go  routers.go
dao/: OfferDao.go  nftDao.go  nftOwnershipDao.go  userDao.go
database/connections/: dbConnection.go  mongoDbConnection.go
database/repository/: commonRepository.go
deploy/: hosts  production.yml  qa.yml  staging.yml
deployments/: deployment.go
dtos/requestDtos/: collection.go  docs.go  endorsement.go  faq.go  htmlGenerator.go  nft.go  oneTimePassword.go  partner.go  review.go  svgrst.go  watchList.go  weiget.go
dtos/responseDtos/: collection.go  endorsement.go  errors.go  faq.go  healthCheck.go  htmlGeneratoe.go  nft.go  nftComposer.go  queryExecuter.go  (+3 more)
models/: RURI.go  Router.go  Routers.go  document.go  endorsement.go  faq.go  favourite.go  htmlNFT.go  interfaces.go  ipfs.go  map.go  marketplaceUser.go  newsletter.go  nft.go  nftCollection.go  nftComposerProject.go  nftOffer.go  nftOwnership.go  pagination.go  partners.go  quickMint.go  review.go  ruri.go  svg.go  tags.go  txn.go  user.go  watchList.go
routes/: checkTest.go  nftRoutes.go  routers.go  routes.go  userRoutes.go
services/: common.go
services/queryLanguageService/LogAnalyzer/: AdditionalFunctions.h  Bool.h  BuildErrorHandler.cpp  BuildErrorHandler.h  CMakeLists.txt  CPlusPlusEntry.cpp  CPlusPlusEntry.h  Command.cpp  Command.h  CommonIncludes.h  DateTime.h  DateTimeOperations.cpp  DateTimeOperations.h  DateTimeOperations.hpp  Debugger.cpp  Debugger.h  DefFileReader.cpp  DefFileReader.h  Defs.h  ELBlockElement.cpp  ELBlockElement.h  ELBlockTemplate.cpp  ELBlockTemplateParser.cpp  ELCompositeVariableParser.cpp  ELCompositeVariableParser.h  ELConstantString.h  ELFillerString.cpp  ELFloat.cpp  ELFloat.h  ELInterpretedElement.cpp  ELInterpretedElement.h  ELInterpretter.cpp  ELInterpretter.h  ELLineParser.cpp  ELLineParserResult.h  ELLineTemplate.cpp  ELLineTemplateParser.h  ELListParser.cpp  ELListParser.h  ELNodeWrapper.h  (+73 more)
(+179 files in other folders)
