cmake_minimum_required(VERSION 3.20)
project(LogAnalyzer)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(LogAnalyzer
        AdditionalFunctions.h
        allocators.h
        biginteger.h
        Bool.cpp
        Bool.h
        Command.cpp
        Command.h
        CommonIncludes.h
        CPlusPlusEntry.cpp
        CPlusPlusEntry.h
        cursorstreamwrapper.h
        DateTime.h
        DateTimeOperations.cpp
        DateTimeOperations.h
        DateTimeOperations.hpp
        Debugger.cpp
        Debugger.h
        DefFileReader.cpp
        DefFileReader.h
        Defs.h
        diyfp.h
        document.h
        dotenv.h
        dtoa.h
        easylogging++.cc
        easylogging++.h
        ELBasicVariableParser.cpp
        ELBasicVariableParser.h
        ELBlockElement.cpp
        ELBlockElement.h
        ELBlockTemplate.cpp
        ELBlockTemplate.h
        ELBlockTemplateParser.cpp
        ELBlockTemplateParser.h
        ELCompositeVariableParser.cpp
        ELCompositeVariableParser.h
        ELConstantString.cpp
        ELConstantString.h
        ELFillerString.cpp
        ELFillerString.h
        ELFloat.cpp
        ELFloat.h
        ELInterpretedElement.cpp
        ELInterpretedElement.h
        ELInterpretter.cpp
        ELInterpretter.h
        ELLineParser.cpp
        ELLineParser.h
        ELLineParserResult.cpp
        ELLineParserResult.h
        ELLineTemplate.cpp
        ELLineTemplate.h
        ELLineTemplateParser.cpp
        ELLineTemplateParser.h
        ELListParser.cpp
        ELListParser.h
        ELNodeWrapper.cpp
        ELNodeWrapper.h
        ELNumber.cpp
        ELNumber.h
        ELParser.cpp
        ELParser.h
        ELParserResult.cpp
        ELParserResult.h
        ELSequenceBlockElement.cpp
        ELSequenceBlockElement.h
        ELSequenceVar.cpp
        ELSequenceVar.h
        ELSingularBlockElement.cpp
        ELSingularBlockElement.h
        ELSpacesString.cpp
        ELSpacesString.h
        ELString.cpp
        ELString.h
        ELStringLiteralParser.cpp
        ELStringLiteralParser.h
        ELText.cpp
        ELText.h
        ELVariable.cpp
        ELVariable.h
        ELVariableParser.cpp
        ELVariableParser.h
        en.h
        encodedstream.h
        encodings.h
        Entity.h
        EntityList.cpp
        EntityList.h
        error.h
        ExecutionContext.h
        ExecutionTemplate.cpp
        ExecutionTemplate.h
        ExecutionTemplateList.cpp
        ExecutionTemplateList.h
        FCLWrapper.cpp
        FCLWrapper.h
        filereadstream.h
        filewritestream.h
        fwd.h
        ieee754.h
        Int.h
        ISpecialCommand.h
        istreamwrapper.h
        itoa.h
        json.hpp
        LDAL_Wrapper.cpp
        LDAL_Wrapper.h
        Logger.h
        LogJsonParser.cpp
        LogJsonParser.h
        MemMan.cpp
        main.cpp
        MemMan.h
        memorybuffer.h
        memorystream.h
        meta.h
        MetaData.h
        NamedPipeOperations.cpp
        NamedPipeOperations.h
        Node.cpp
        Node.h
        NodeCustomValueShorthand.cpp
        NodeCustomValueShorthand.h
        Null.h
        ostreamwrapper.h
        OTPParser.cpp
        OTPParser.h
        pointer.h
        pow10.h
        prettywriter.h
        ProcessLog.h
        QueryExecuter.cpp
        QueryExecuter.h
        QueryTreeScript.cpp
        QueryTreeScript.h
        rapidjson.h
        reader.h
        regex.h
        ResultGenerator.cpp
        ResultGenerator.h
        schema.h
        ScriptReader.cpp
        ScriptReader.h
        SpecialCommandExecuter.cpp
        SpecialCommandExecuter.h
        stack.h
        stream.h
        strfunc.h
        stringbuffer.h
        StringOperations.cpp
        StringOperations.h
        Strings.h
        strtod.h
        swap.h
        Tests.cpp
        Tests.h
        TypeDefs.h
        Utils.cpp
        Utils.h
        Value.h
        writer.h)
